<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background"
        tools:context=".Pages.FirstCase_Lambda_GT_Mu">

        <EditText
            android:id="@+id/lambdaValue"
            style="@style/InputStyle"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/lambdaValue"
            android:importantForAutofill="no"
            app:layout_constraintEnd_toStartOf="@+id/muValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/muValue"
            style="@style/InputStyle"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/muValue"
            android:importantForAutofill="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/kValue"
            style="@style/InputStyle"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/kValue"
            android:importantForAutofill="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toEndOf="@+id/muValue"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tiValue"
            style="@style/answerTextColor"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/tiValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.623"
            app:layout_constraintStart_toEndOf="@+id/tiEquation"
            app:layout_constraintTop_toBottomOf="@+id/getChart" />

        <Button
            android:id="@+id/buttonSum1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_shape"
            android:text="@string/sumCaseOne"
            android:textColor="?attr/colorOnSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/muValue" />

        <Button
            android:id="@+id/getChart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_shape"
            android:text="@string/getChart"
            android:textColor="?attr/colorOnSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSum1" />

        <TextView
            android:id="@+id/tiEquation"
            style="@style/mainTextMe"
            android:layout_marginTop="24dp"
            android:text="@string/tiEquation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/getChart" />

        <TextView
            android:id="@+id/tLTCaseOne"
            style="@style/mainTextMe"
            android:layout_marginStart="16dp"
            android:layout_marginTop="80dp"
            android:text="@string/tLTCaseOne"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiEquation" />

        <TextView
            android:id="@+id/nOftZeroCaseOne"
            style="@style/answerTextColor"
            android:layout_marginTop="156dp"
            android:layout_marginEnd="8dp"
            android:text="@string/nOftCaseOne"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toEndOf="@+id/tLTCaseOne"
            app:layout_constraintTop_toBottomOf="@+id/getChart" />

        <TextView
            android:id="@+id/tBetweenCaseOne"
            style="@style/mainTextMe"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/tBetweenCaseOne"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tLTCaseOne" />

        <TextView
            android:id="@+id/nOftBetweenCaseOne"
            style="@style/answerTextColor"
            android:text="@string/nOfBetweenCaseOne"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tBetweenCaseOne" />

        <EditText
            android:id="@+id/tValue"
            style="@style/InputStyle"
            android:layout_width="120dp"
            android:ems="10"
            android:hint="@string/tValue"
            android:importantForAutofill="no"
            app:layout_constraintBottom_toTopOf="@+id/tLTCaseOne"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSum1"
            app:layout_constraintVertical_bias="0.875"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/tGTtiCaseOne"
            style="@style/mainTextMe"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/tGTtiCaseOne"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nOftBetweenCaseOne" />

        <TextView
            android:id="@+id/nOftGTCaseOne"
            style="@style/answerTextColor"
            android:layout_marginTop="8dp"
            android:text="@string/nOftGTCaseOne"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toEndOf="@+id/tGTtiCaseOne"
            app:layout_constraintTop_toBottomOf="@+id/nOftBetweenCaseOne" />

        <TextView
            android:id="@+id/nEqualZeroCaseOne"
            style="@style/mainTextMe"
            android:layout_marginStart="16dp"
            android:layout_marginTop="76dp"
            android:text="@string/nEqualZeroCaseOne"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nOftBetweenCaseOne" />

        <TextView
            android:id="@+id/wqOfnZeroCaseOne"
            style="@style/answerTextColor"
            android:layout_marginTop="76dp"
            android:text="@string/wqOfnZeroCaseOne"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.829"
            app:layout_constraintStart_toEndOf="@+id/nEqualZeroCaseOne"
            app:layout_constraintTop_toBottomOf="@+id/nOftBetweenCaseOne" />

        <TextView
            android:id="@+id/nLTBalkCaseOne"
            style="@style/mainTextMe"
            android:layout_marginStart="0dp"
            android:layout_marginTop="136dp"
            android:text="@string/nLTBalkCaseOne"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nOftBetweenCaseOne" />

        <TextView
            android:id="@+id/wqOfnLTBalkCaseOne"
            style="@style/answerTextColor"
            android:layout_height="wrap_content"
            android:text="@string/wqOfnLTBalkCaseOne"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nLTBalkCaseOne" />

        <TextView
            android:id="@+id/nGTBalkCaseOne"
            style="@style/mainTextMe"
            android:layout_marginTop="24dp"
            android:text="@string/nGTBalkCaseOne"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wqOfnLTBalkCaseOne" />

        <TextView
            android:id="@+id/wqOfnGTBalkCaseOne"
            style="@style/answerTextColor"
            android:layout_marginBottom="40dp"
            android:text="@string/wqOfnGTBalkCaseOne"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nGTBalkCaseOne" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>